# ocamler-grpo

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  anki_deck_ml_concepts.txt  environment.py  evaluate.py  fetch_acecode_10k.py  flake.nix  generate_solutions_local.py  hf_convert.py  logger.py  ocaml_env.py  plot_training_curves.py  problems.csv  problems1k.test.csv  pyproject.toml  reward.py  reward_vf.py  run-training.sh  test_reward.py  train.py  train_lora.py
dashboard/: completions.html  index.html  server.py  sft.html
doc/: 2025-12-11-epoch-0.21-training-failure-analysis.md  2025-12-12-reward-structure-redesign.md  2025-12-14-epoch-0.67-plateau-analysis.md  MODEL_CARD_TEMPLATE.md  end-marker-optimisation.md  epoch-0.20-sparse-reward-analysis.md  epoch-0.28-analysis.md  fix-filibuster-training.md  gradient-explosion-fix.md  inference-optimizations-explained.md  inference-speed-optimization-plan.md  metrics.md  mode-collapse-epoch-0.04-analysis.md  runaway-penalty-plan.md  training-checkpoint-plan.md  training-summary.md
eval/: __init__.py  compare.py  constants.py  eval.py  metrics.py  ocaml_tests.csv  ocaml_tests_sample.csv  report.py  report_template.html
rlvr/: __init__.py  config.py  data.py  environment.py  logging.py  reward.py  train.py
scripts/: bootstrap.sh  merge_adapter.py  run-eval.sh  run-rlvr-training.py  run-sft.sh  start_vllm_server.sh  validate_training_data.py
sft/: __init__.py  config.py  data.py  logging.py  train.py
tests/: test_environment.py  test_eval.py  test_eval_metrics.py  test_ocaml_env.py  test_reward.py  (+2 more)
(+1 files in other folders)
